# locn

./: .gitignore  Doxyfile  README.md
dat/: layer_71.tif-protocol.txt  layer_71.tif.csv
docs/: index.html  target.html
docs/html/: README_8md_source.html  annotated.html  classLikelihood-members.html  classLikelihood.html  classNelderMead-members.html  classNelderMead.html  classTiff-members.html  classTiff.html  classes.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  loc1_8cc.html  loc1_8cc__incl.map  loc1_8cc__incl.md5  loc1_8cc_source.html  localization_8cc.html  localization_8cc__incl.map  localization_8cc__incl.md5  localization_8cc_source.html  menudata.js  nelder__mead_8cc.html  nelder__mead_8cc__incl.map  nelder__mead_8cc__incl.md5  nelder__mead_8cc_source.html  nelder__mead_8hh.html  nelder__mead_8hh__dep__incl.map  nelder__mead_8hh__dep__incl.md5  nelder__mead_8hh_source.html  nelder__mead_8hxx.html  (+35 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  (+40 more)
nb/: proc1.ipynb  proc2.ipynb
src/: CMakeLists.txt  loc1.cc  localization.cc  nelder_mead.cc  nelder_mead.hh  nelder_mead.hxx  tiff.cc  tiff.hh  utils.cc  utils.hh  utils.hxx
